--- a/src/app/dispatch/dispatch.page.html
+++ b/src/app/dispatch/dispatch.page.html
@@ -1,8 +1,12 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Dispatch</ion-title>
+    <ion-title size="small">Dispatch</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="navigateToDrivers();">Truck</ion-button >
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
+
 
 <ion-content>
   <h1>This is where the dispatch page will go</h1>
