--- a/src/app/search/search.page.html
+++ b/src/app/search/search.page.html
@@ -1,9 +1,62 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar>
     <ion-title>Search Customers</ion-title>
   </ion-toolbar>
-</ion-header>
-
+</ion-header> -->
+<app-header [title]="'Search Customers'"></app-header>
 <ion-content>
-
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12">
+        <div>
+          <ion-searchbar 
+            animated 
+            debounce="500"
+            showCancelButton="focus"
+            placeholder="Type here..."
+            (ionChange)="searchCustomer($event)"
+            ></ion-searchbar>
+        </div>
+      </ion-col>
+      <ion-col size="12">
+        <div>
+          <ion-item>
+            <ion-label>Pickup Season</ion-label>
+            <ion-select [(ngModel)]="pickupSeason" [value]="pickupSeason">
+              <ion-select-option value="Current">Current</ion-select-option>
+              <ion-select-option value="ALL">ALL</ion-select-option>
+            </ion-select>
+          </ion-item>
+        </div>
+        <div class="ion-padding">
+          <ion-label color="primary">
+            {{customers.length > 0 ? customers.length + ' Result' : 'No result found'}}
+          </ion-label>
+        </div>
+        <div *ngIf="customers.length" >
+          <!-- <ion-list lines="none">
+            <ion-item *ngFor="let item of customers" class="g-card g-box-shadow" button details="none">
+              <div class="item-divider p-0-5">
+                {{item?.name}}{{' • '+item?.customerId}}{{ item.warehouseLocation ? ' • '+item.warehouseLocation : ''}}
+              </div>
+              <div class="item-text-wrap p-0-5">
+                {{item?.school+' • '+item?.pickupSeason}}
+              </div>
+            </ion-item>
+          </ion-list> -->
+          <div 
+            *ngFor="let item of customers"
+            (click)="detail(item)" 
+            class="g-card g-box-shadow" >
+            <div class="item-divider p-0-5">
+              {{item?.name}}{{' • '+item?.customerId}}{{ item.warehouseLocation ? ' • '+item.warehouseLocation : ''}}
+            </div>
+            <div class="item-text-wrap p-0-5">
+              {{item?.school+' • '+item?.pickupSeason}}
+            </div>
+          </div>
+        </div>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
