--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -5,8 +5,16 @@
       <ion-icon name="car"></ion-icon>
       <ion-label>Route</ion-label>
     </ion-tab-button>
+    <ion-tab-button tab="unload">
+      <ion-icon src="assets/icon/unloading.svg"></ion-icon>
+      <ion-label>Unload</ion-label>
+    </ion-tab-button>
+    <ion-tab-button tab="load">
+      <ion-icon src="assets/icon/loading.svg"></ion-icon>
+      <ion-label>Load</ion-label>
+    </ion-tab-button>
     <ion-tab-button tab="search">
-      <ion-icon name="search"></ion-icon>
+      <ion-icon name="people"></ion-icon>
       <ion-label>Search</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
