--- a/src/global.scss
+++ b/src/global.scss
@@ -42,3 +42,8 @@
     color: var(--ion-color-dark);
     padding: 0.5rem;
 }
+.d-flex{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
