--- a/src/app/dispatch/dispatch.page.html
+++ b/src/app/dispatch/dispatch.page.html
@@ -1,8 +1,8 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title size="small">Dispatch</ion-title>
+  <ion-toolbar class="ion-text-center">
+    <ion-title class="ion-text-center">{{driver ? driver?.nickname :'Dispatch'}}</ion-title>
     <ion-buttons slot="end">
-      <ion-button (click)="navigateToDrivers();">Truck</ion-button >
+      <ion-button (click)="navigateToDrivers()">Truck</ion-button >
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
@@ -12,7 +12,7 @@
   <ion-list *ngIf="dispatch">
     <ion-item (click)="goToOrder(order);" *ngFor="let order of orders"  tappable>
       <ion-label>
-        <h2>{{order.Name}}</h2>
+        <h2>{{order.name}}</h2>
         <p>Test order</p>
       </ion-label>
     </ion-item>
