set dispatch screen

--- a/src/app/tabs/load/load.page.html
+++ b/src/app/tabs/load/load.page.html
@@ -14,7 +14,9 @@
             *ngFor="let dispatch of loads" 
             button 
             (click)="detail(dispatch)">
-            <h2>{{ dataService.displayDate(dispatch) }} ({{dispatch.warehouseStatus}} - {{dispatch.delivery_count}} orders)</h2>
+            <ion-label>
+              <h2>{{ dataService.displayDate(dispatch) }} ({{dispatch.warehouseStatus}} - {{dispatch.delivery_count}} orders)</h2>
+            </ion-label>
           </ion-item>
         </ion-list>
       </ion-col>
