--- a/src/app/dispatch/dispatch.page.html
+++ b/src/app/dispatch/dispatch.page.html
@@ -9,14 +9,48 @@
 
 
 <ion-content>
-  <ion-list *ngIf="dispatch">
+  <div *ngIf="dispatch && dispatch._id" >
+    <ion-item lines="none">
+      <ion-label>
+        <h2>Truck Status</h2>
+        <p>{{dispatch?.status}}</p>
+      </ion-label>
+    </ion-item>
+  </div>
+  <div *ngIf="dispatch && dispatch.mover" >
+    <ion-item class="ion-margin-horizontal" color="danger" lines="none">
+      <ion-label>
+        Currently tracking location for {{dispatch.mover.name}}
+      </ion-label>
+    </ion-item>
+    <ion-item class="ion-margin-horizontal" color="danger" lines="none">
+      <ion-label>
+        Tap to change location provider.
+      </ion-label>
+    </ion-item>
+  </div>
+  <div class="ion-padding">
+    <ion-label color="primary">Today's schedule</ion-label>
+  </div>
+  <ng-container class="ion-padding" *ngIf="dispatch">
+    <div (click)="goToOrder(order);" *ngFor="let order of orders">
+      <div class="ion-margin-bottom ion-padding-horizontal">
+        Address: {{order?.address}}
+      </div>
+      <div class="ion-text-center">@</div>
+      <div class="ion-text-center ion-padding">
+        {{order?.guartanteedTime}}
+      </div>
+    </div>
+  </ng-container>
+  <!-- <ion-list *ngIf="dispatch">
     <ion-item (click)="goToOrder(order);" *ngFor="let order of orders"  tappable>
       <ion-label>
         <h2>{{order.name}}</h2>
-        <p>Test order</p>
+        <p></p>
       </ion-label>
     </ion-item>
-  </ion-list>
+  </ion-list> -->
 
   <ion-list *ngIf="!driver">
     <ion-item>
