90% dispatch screen complete.

--- a/src/app/dispatch/dispatch.page.html
+++ b/src/app/dispatch/dispatch.page.html
@@ -7,15 +7,15 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <div class="isTraning" *ngIf="dataService.isTraining | async" >
+  <!-- <div class="isTraning" *ngIf="dataService.isTraining | async" >
     <ion-label>Training Mode</ion-label>
-  </div>
-  <div *ngIf="dispatch && dispatch._id" >
-    <ion-item lines="none">
-      <ion-label>
-        <h2>Truck Status</h2>
-        <p>{{dispatch?.status}}</p>
-      </ion-label>
+  </div> -->
+  <div *ngIf="dispatch && dispatch._id && dispatchUpdates.length && dispatch.status !== 'New'" >
+    <ion-item>
+      <ion-label>Truck Status</ion-label>
+      <ion-select (ionChange)="setDispatchStatus()" [value]="dispatch.status">
+        <ion-select-option *ngFor="let item of dispatchUpdates"  [value]="item.status">{{item.status}}</ion-select-option>
+      </ion-select>
     </ion-item>
   </div>
   <div *ngIf="dispatch && dispatch.mover" >
@@ -33,13 +33,13 @@
   <div class="ion-padding">
     <ion-label color="primary">Today's schedule</ion-label>
   </div>
-  <div class="list" *ngIf="dispatch._id && dispatch.status == 'New'">
+  <div class="list" *ngIf="dispatch?._id && dispatch.status == 'New'">
     <!-- <div class="list"> -->
     <div class="item item-body">
       <div class="ion-text-center f-bold">
         <ion-label color="primary">First Appointment</ion-label>
       </div>
-      <p>{{
+      <p class="ion-text-center ion-padding-horizontal">{{
         (dispatch.orders[0].building && dispatch.orders[0].building != 'MY BUILDING IS NOT LISTED') ?
         dispatch.orders[0].building + ' @ ' + dispatch.orders[0].deliveryTime : 
         dispatch.orders[0].address + ' @ ' + dispatch.orders[0].deliveryTime
@@ -68,6 +68,100 @@
       </ion-button>
     </div>
   </div>
+  <div *ngIf="dispatch?._id && dispatch.status != 'New'" >
+    <div *ngIf="orders?.length === 0" >
+      <div class="ion-text-center f-1-5">
+        <ion-icon name="trophy" color="dark"></ion-icon>
+      </div>
+      <div class="ion-text-center">
+        <ion-label color="dark">You have completed all your orders for the day!</ion-label>
+      </div>
+    </div>
+    <div *ngIf="orders?.length > 0" class="ion-text-center">
+      <ion-label>
+        {{orders.length}} Appointment<span ng-if="orders.length > 1">s</span> Remaining
+      </ion-label>
+    </div>
+    <div *ngFor="let appointment of orders">
+      <div *ngIf="appointment.warehouseStatus != 'Missing'" >
+        <div class="ion-padding-horizontal">
+          <div>
+            <ion-text color="primary" (click)="goToOrderWithId(appointment._id)">
+              {{appointment.name}} ({{appointment.deliveryTime}})
+              <span style="background-color:'#f00'" *ngIf="appointment.warehouseStatus == 'Loaded - Last Order on Truck'">Last -- </span>
+            </ion-text>
+          </div>
+          <ion-item *ngIf="appointment.type == 'Pickup'" >
+            <ion-label>Order status</ion-label>
+            <ion-select (ionChange)="setOrderStatus(appointment)" [value]="appointment.status" placeholder="Select One">
+              <ion-select-option *ngFor="let item of orderUpdates"  [value]="item.status">{{item.status}}</ion-select-option>
+            </ion-select>
+          </ion-item>
+          <ion-item *ngIf="appointment.type == 'Delivery'" >
+            <ion-label>Delivery status</ion-label>
+            <ion-select (ionChange)="setOrderStatus(appointment)" [value]="appointment.status" placeholder="Select One">
+              <ion-select-option *ngFor="let item of deliveryUpdates"  [value]="item.status">{{item.status}}</ion-select-option>
+            </ion-select>
+          </ion-item>
+          <p class="ion-text-center ion-padding-horizontal f-bold" *ngIf="appointment.guartanteedPickup"> 
+		      	<ion-label color="primary">Guaranteed Time Window</ion-label> 
+		      </p>
+          <p class="ion-text-center ion-padding-horizontal f-bold">
+		      	<ion-text *ngIf="appointment.warehouseStatus == 'Partially Loaded'" color="danger">Partial Order - </ion-text>
+		      	<ion-text *ngIf="appointment.type == 'Delivery'">DEL - </ion-text>
+			      <ion-text *ngIf="appointment.type == 'Pickup'">PU - </ion-text>
+
+			      <ion-text *ngIf="containsRoomService(appointment.serviceType) && appointment.type == 'Pickup'">RS - </ion-text>
+			      <ion-text *ngIf="!containsRoomService(appointment.serviceType) && appointment.type == 'Pickup'">ME - </ion-text>
+
+			      <ion-text *ngIf="appointment.shipping"><strong>Ship</strong> - </ion-text>
+
+
+			      <ion-text *ngIf="appointment.type == 'Delivery' && (appointment.dropoffPermissions == 'Drop them off unattended if you cannot reach me' || appointment.dropoffPermissions == 'Drop them off unattended if you cannot reach me (off-campus housing only)') "><strong>YES, You may drop unattended</strong></ion-text>
+
+			      <ion-text *ngIf="appointment.type == 'Delivery' && appointment.dropoffPermissions == 'Please do not drop off unattended (Subject to a missed appointment fee)' "><strong>DO NOT drop unattended - </strong></ion-text>
+
+			      <ion-text *ngIf="appointment.building">{{ substringField(appointment.building) }}</ion-text>
+			      <ion-text *ngIf="!appointment.building">{{ substringField(appointment.address) }}</ion-text>
+			    </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div *ngIf="dispatch?._id && flaggedOrders.length > 0 && dispatch.status != 'New'">
+    <div class="ion-text-center ion-padding-horizontal" *ngIf="flaggedOrders.length > 0">
+      Flagged Appointments ({{flaggedOrders.length}})
+    </div>
+    <ion-item (click)="goToOrderWithId(appointment._id)" *ngFor="let appointment of flaggedOrders">
+      {{appointment.name}}
+    </ion-item>
+  </div>
+
+  <!-- working here -->
+  <!-- <div class="list" *ngIf="dispatch._id && completedOrders.length > 0 && dispatch.status != 'New'">
+    <div class="ion-text-center ion-padding-horizontal" *ngIf="completedOrders.length > 0">
+      {{completedOrders.length}} Completed Appointment<span *ngIf="completedOrders.length > 1">s</span>
+    </div>
+
+    <a class="item" href="#/app/orders/{{appointment._id}}" ng-repeat="appointment in completedOrders track by $index">
+      <h2>
+        <span style="max-width: 240px; width: 240px; overflow: ellipsis;">
+          {{appointment.name}}
+          <span style="background-color:'#f00'" ng-if="appointment.warehouseStatus == 'Loaded - Last Order on Truck'">Last -- </span>
+        </span>
+
+        <select ng-click="$event.preventDefault();" class="item-select" style="float:right; font-size: 100%; max-width: 34%;" ng-change="setOrderStatus(appointment)" ng-model="appointment.status" ng-if="appointment.type == 'Pickup'">
+          <option ng-repeat="stage in orderUpdatesComplete" ng-selected="appointment.status == stage.value">{{stage.status}}</option>
+        </select>
+
+        <select ng-click="$event.preventDefault();" class="item-select" style="float:right; font-size: 100%; max-width: 34%;" ng-change="setOrderStatus(appointment)" ng-model="appointment.status" ng-if="appointment.type == 'Delivery'">
+          <option ng-repeat="stage in orderUpdatesComplete" ng-selected="appointment.status == stage.status">{{stage.status}}</option>
+        </select>
+      </h2>
+    </a>
+  </div> -->
+
   <!-- <ng-container class="ion-padding" *ngIf="dispatch">
     <div (click)="goToOrder(order);" *ngFor="let order of orders">
       <div class="ion-margin-bottom ion-padding-horizontal">
