--- a/src/app/dispatch/dispatch.page.html
+++ b/src/app/dispatch/dispatch.page.html
@@ -1,6 +1,7 @@
 <ion-header>
   <ion-toolbar class="ion-text-center">
-    <ion-title class="ion-text-center">{{driver ? driver?.nickname :'Dispatch'}}</ion-title>
+    <!-- <ion-title class="ion-text-center">{{driver ? driver?.nickname :'Dispatch'}}</ion-title> -->
+    <ion-title class="ion-text-center">{{(dataService.driverSub | async) ? (dataService.driverSub | async).nickname : 'Dispatch'}}</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="navigateToDrivers()">Truck</ion-button >
     </ion-buttons>
@@ -88,11 +89,11 @@
           <div>
             <ion-text color="primary" (click)="goToOrderWithId(appointment._id)">
               {{appointment.name}} ({{appointment.deliveryTime}})
-              <span style="background-color:'#f00'" *ngIf="appointment.warehouseStatus == 'Loaded - Last Order on Truck'">Last -- </span>
+              <ion-text color="danger" *ngIf="appointment.warehouseStatus == 'Loaded - Last Order on Truck'">Last -- </ion-text>
             </ion-text>
           </div>
           <ion-item *ngIf="appointment.type == 'Pickup'" >
-            <ion-label>Order status</ion-label>
+            <ion-label>Pickup status</ion-label>
             <ion-select (ionChange)="setOrderStatus(appointment)" [value]="appointment.status" placeholder="Select One">
               <ion-select-option *ngFor="let item of orderUpdates"  [value]="item.status">{{item.status}}</ion-select-option>
             </ion-select>
@@ -138,50 +139,96 @@
     </ion-item>
   </div>
 
-  <!-- working here -->
-  <!-- <div class="list" *ngIf="dispatch._id && completedOrders.length > 0 && dispatch.status != 'New'">
+  <div class="list" *ngIf="dispatch?._id && completedOrders.length > 0 && dispatch.status != 'New'">
     <div class="ion-text-center ion-padding-horizontal" *ngIf="completedOrders.length > 0">
       {{completedOrders.length}} Completed Appointment<span *ngIf="completedOrders.length > 1">s</span>
     </div>
 
-    <a class="item" href="#/app/orders/{{appointment._id}}" ng-repeat="appointment in completedOrders track by $index">
+    <div class="item" (click)="goToOrderWithId(appointment._id)" *ngFor="let appointment of completedOrders">
       <h2>
-        <span style="max-width: 240px; width: 240px; overflow: ellipsis;">
+        <ion-text style="max-width: 240px; width: 240px; overflow: ellipsis;">
           {{appointment.name}}
-          <span style="background-color:'#f00'" ng-if="appointment.warehouseStatus == 'Loaded - Last Order on Truck'">Last -- </span>
-        </span>
-
-        <select ng-click="$event.preventDefault();" class="item-select" style="float:right; font-size: 100%; max-width: 34%;" ng-change="setOrderStatus(appointment)" ng-model="appointment.status" ng-if="appointment.type == 'Pickup'">
+          <ion-text color="danger" *ngIf="appointment.warehouseStatus == 'Loaded - Last Order on Truck'">Last -- </ion-text>
+        </ion-text>
+        <ion-item *ngIf="appointment.type == 'Pickup'" >
+          <ion-label>Pickup status</ion-label>
+          <ion-select (ionChange)="setOrderStatus(appointment)" [value]="appointment.status" placeholder="Select One">
+            <ion-select-option *ngFor="let item of orderUpdatesComplete"  [value]="item.status">{{item.status}}</ion-select-option>
+          </ion-select>
+        </ion-item>
+        <!-- <select ng-click="$event.preventDefault();" class="item-select" style="float:right; font-size: 100%; max-width: 34%;" ng-change="setOrderStatus(appointment)" ng-model="appointment.status" ng-if="appointment.type == 'Pickup'">
           <option ng-repeat="stage in orderUpdatesComplete" ng-selected="appointment.status == stage.value">{{stage.status}}</option>
-        </select>
-
-        <select ng-click="$event.preventDefault();" class="item-select" style="float:right; font-size: 100%; max-width: 34%;" ng-change="setOrderStatus(appointment)" ng-model="appointment.status" ng-if="appointment.type == 'Delivery'">
+        </select> -->
+        <ion-item *ngIf="appointment.type == 'Delivery'" >
+          <ion-label>Delivery status</ion-label>
+          <ion-select (ionChange)="setOrderStatus(appointment)" [value]="appointment.status" placeholder="Select One">
+            <ion-select-option *ngFor="let item of orderUpdatesComplete"  [value]="item.status">{{item.status}}</ion-select-option>
+          </ion-select>
+        </ion-item>
+        <!-- <select ng-click="$event.preventDefault();" class="item-select" style="float:right; font-size: 100%; max-width: 34%;" ng-change="setOrderStatus(appointment)" ng-model="appointment.status" ng-if="appointment.type == 'Delivery'">
           <option ng-repeat="stage in orderUpdatesComplete" ng-selected="appointment.status == stage.status">{{stage.status}}</option>
-        </select>
+        </select> -->
       </h2>
-    </a>
-  </div> -->
-
-  <!-- <ng-container class="ion-padding" *ngIf="dispatch">
-    <div (click)="goToOrder(order);" *ngFor="let order of orders">
-      <div class="ion-margin-bottom ion-padding-horizontal">
-        Address: {{order?.address}}
-      </div>
-      <div class="ion-text-center">@</div>
-      <div class="ion-text-center ion-padding">
-        {{order?.guartanteedTime}}
-      </div>
     </div>
-  </ng-container> -->
-  <!-- <ion-list *ngIf="dispatch">
-    <ion-item (click)="goToOrder(order);" *ngFor="let order of orders"  tappable>
-      <ion-label>
-        <h2>{{order.name}}</h2>
-        <p></p>
-      </ion-label>
-    </ion-item>
-  </ion-list> -->
+  </div>
+  <div class="list" *ngIf="dispatch?._id && rescheduledOrders.length > 0 && dispatch.status != 'New'">
+    <div class="item item-divider" *ngIf="rescheduledOrders.length > 0">
+      {{rescheduledOrders.length}} Rescheduled Appointment<span *ngIf="rescheduledOrders.length > 1">s</span>
+    </div>
+    <div class="item" (click)="goToOrderWithId(appointment._id)" *ngFor="let appointment of rescheduledOrders">
+      <h2>
+        <ion-text style="max-width: 240px; width: 240px; overflow: ellipsis;">
+          {{appointment.name}}
+          <ion-text color="danger" *ngIf="appointment.warehouseStatus == 'Loaded - Last Order on Truck'">Last -- </ion-text>
+        </ion-text>
+        <ion-item *ngIf="appointment.type == 'Pickup'" >
+          <ion-label>Pickup status</ion-label>
+          <ion-select (ionChange)="setOrderStatus(appointment)" [value]="appointment.status" placeholder="Select One">
+            <ion-select-option *ngFor="let item of orderUpdates"  [value]="item.status">{{item.status}}</ion-select-option>
+          </ion-select>
+        </ion-item>
+        <ion-item *ngIf="appointment.type == 'Delivery'" >
+          <ion-label>Delivery status</ion-label>
+          <ion-select (ionChange)="setOrderStatus(appointment)" [value]="appointment.status" placeholder="Select One">
+            <ion-select-option *ngFor="let item of orderUpdates"  [value]="item.status">{{item.status}}</ion-select-option>
+          </ion-select>
+        </ion-item>
 
+        <!-- <select ng-click="$event.preventDefault();" class="item-select" style="float:right; font-size: 100%; max-width: 34%;" ng-change="setOrderStatus(appointment)" ng-model="appointment.status" ng-if="appointment.type == 'Delivery'">
+          <option ng-repeat="stage in deliveryUpdates" ng-selected="appointment.status == stage.status">{{stage.status}}</option>
+        </select> -->
+      </h2>
+    </div>    
+  </div>
+  <div class="list" *ngIf="dispatch?._id && canceledOrders.length > 0 && dispatch.status != 'New'">
+    <div class="item item-divider" *ngIf="canceledOrders.length > 0">
+      {{canceledOrders.length}} Canceled Appointment<span ng-if="canceledOrders.length > 1">s</span>
+    </div>
+    <!-- <ion-item href="#/app/orders/{{appointment._id}}" ng-repeat="appointment in canceledOrders track by $index">
+      {{appointment.name}}
+    </ion-item> -->
+
+    <div class="item" (click)="goToOrderWithId(appointment._id)" *ngFor="let appointment of canceledOrders">
+      <h2>
+        <ion-text style="max-width: 240px; width: 240px; overflow: ellipsis;">
+          {{appointment.name}}
+          <ion-text color="danger" *ngIf="appointment.warehouseStatus == 'Loaded - Last Order on Truck'">Last -- </ion-text>
+        </ion-text>
+        <ion-item *ngIf="appointment.type == 'Pickup'" >
+          <ion-label>Pickup status</ion-label>
+          <ion-select (ionChange)="setOrderStatus(appointment)" [value]="appointment.status" placeholder="Select One">
+            <ion-select-option *ngFor="let item of canceledStatuses"  [value]="item.status">{{item.status}}</ion-select-option>
+          </ion-select>
+        </ion-item>
+        <ion-item *ngIf="appointment.type == 'Delivery'" >
+          <ion-label>Delivery status</ion-label>
+          <ion-select (ionChange)="setOrderStatus(appointment)" [value]="appointment.status" placeholder="Select One">
+            <ion-select-option *ngFor="let item of canceledStatuses"  [value]="item.status">{{item.status}}</ion-select-option>
+          </ion-select>
+        </ion-item>
+      </h2>
+    </div>
+  </div>
   <ion-list *ngIf="!driver">
     <ion-item>
       <ion-label>
