--- a/src/app/tabs/unload/unload.page.html
+++ b/src/app/tabs/unload/unload.page.html
@@ -3,6 +3,14 @@
 <ion-content>
   <ion-grid>
     <ion-row>
+      <ion-col>
+        <ion-item *ngIf="drivers.length" >
+          <ion-label>Truck to unload</ion-label>
+          <ion-select (ionChange)="loginDriver($event)" [value]="selectedDriver._id">
+            <ion-select-option *ngFor="let item of drivers"  [value]="item._id">{{item.name}}</ion-select-option>
+          </ion-select>
+        </ion-item>
+      </ion-col>
       <!-- <ion-col size="12">
         <div class="item-body" ng-if="dispatch._id && completedOrders.length == 0">
           <h1 class="ion-text-center"><ion-icon name="thumbs-up"></ion-icon></h1>
